<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryapp.DetailsActivity">
    <LinearLayout
        android:id="@+id/layout1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:id="@+id/name"
        android:hint="@string/add_product_name"
        style="@style/Edit_style" />

    <EditText
        android:id="@+id/price"
        android:hint="@string/add_price"
        style="@style/Edit_style" />
<TextView
    android:text="@string/quantity"
    style="@style/quantity_text_view_style" />
    <LinearLayout style="@style/Edit_style">

        <Button
            android:id="@+id/plus"
            android:text="@string/plus"
            style="@style/plus_style" />

        <EditText
            android:id="@+id/quantity"
            android:text="@string/_0"
            style="@style/quantity_style" />

        <Button
            android:id="@+id/minus"
            android:text="@string/mius"
            style="@style/plus_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        android:orientation="vertical"
        style="@style/Edit_style">

        <ImageView
            android:id="@+id/imageview"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            style="@style/Image_view_style" />
    </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save"
        android:layout_margin="10dp"
        android:src="@drawable/ic_add_circle_black_24dp"
        style="@style/Add_style" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/order"
        android:src="@drawable/ic_contacts_black_24dp"
        style="@style/order_style" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete"
        android:src="@drawable/ic_delete_black_24dp"
        style="@style/delete_style" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/image"
        android:src="@drawable/ic_add_a_photo_black_24dp"
        style="@style/image_style" />


</RelativeLayout>
</layout>